fix text-align

--- a/css/simple.css
+++ b/css/simple.css
@@ -488,6 +488,8 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 
 .list--full {
   justify-content: space-between;
+  flex-wrap: wrap;
+  text-align: justify;
 }
 
 .list svg {
